--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <input type="search" placeholder="Where do you want to go?">
       
       <label for="from">From</label>
-      <input type="date" name="from">
+      <input type="date" placeholder="mm-dd-yyy" name="from">
 
       <label for="from">To</label>
-      <input type="date" name="to">
+      <input type="date" placeholder="mm-dd-yyyy" name="to">
 
       <select name="" id="">
         <option value="1">1 Guest</option>
