Updated date picker

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <input type="search" placeholder="Where do you want to go?">
       
       <label for="from">From</label>
-      <input type="date" placeholder="mm-dd-yyy" name="from">
+      <input type="date" placeholder="mm-dd-yyy"  maxViewMode=2 name="from">
 
       <label for="from">To</label>
-      <input type="date" placeholder="mm-dd-yyyy" name="to">
+      <input type="date" placeholder="mm-dd-yyyy" maxViewMode=2 name="to">
 
       <select name="" id="">
         <option value="1">1 Guest</option>
@@ -36,7 +36,7 @@
 
   </div>
   
-  <video  class="dog" src="beso_faking_dead.3gp" autoplay muted loop></video>
+  <video  class="dog" src="beso_faking_dead.3gp" autoplay muted loop playsinline></video>
 
 </body>
 </html>
